[package]
name = "lsgres"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tabled = { version = "0.16", features = ["ansi"] }
colored = "2.1"
regex = "1.10"
once_cell = "1.19"
clap = { version = "4.5", features = ["derive"] }
